[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/InteractableObjects/Sign.gd" type="Script" id=1]
[ext_resource path="res://Scripts/InteractableObjects/Interactable.gd" type="Script" id=2]
[ext_resource path="res://Scenes/InteractableObjects/Interactable.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dialogue/Signs/mappleworth.tres" type="Resource" id=4]

[sub_resource type="CircleShape2D" id=39]
radius = 21.0238

[node name="Sign" type="Area2D"]
position = Vector2( 471, 326 )
script = ExtResource( 1 )
dialogFile = ExtResource( 4 )
entryDialog = "main"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 39 )

[node name="Area2D" type="Area2D" parent="." instance=ExtResource( 3 )]
collision_layer = 256
collision_mask = 256
script = ExtResource( 2 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
